servers/service-filebrowser.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: minecraft
  labels:
    app: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
