servers/service-picolimbo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-limbo
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: picolimbo
spec:
  type: ClusterIP
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: minecraft
  selector:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: picolimbo
