servers/ingress-filebrowser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: minecraft
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: "files.${FQDN}"
spec:
  ingressClassName: traefik-external
  rules:
    - host: "files.${FQDN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - "files.${FQDN}"
      secretName: filebrowser-tls
